# exo

./: .gitignore  pyproject.toml  setup.cfg
-/: filecheck.d
src/exo/: API.py  __init__.py  main.py
src/exo/backend/: mlir_compiler.py
src/exo/backend/mlir/: __init__.py  compiler.py  dialect.py  ir_gen.py
src/exo/backend/mlir/rewrites/: lower_memref.py
src/exo/core/: LoopIR.py
src/exo/stdlib/: analysis.py
tests/: test_mlir.py
tests/filecheck/: filecheck.mlir  filecheck.py  lit.cfg  preserves_args.py  unary_noop.py
