[metadata]
description = Exo: Exocompiled Array Language
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://exo-lang.dev/
license = MIT License
python_required =
    >=3.9, <4
include_package_data = True

[options]
packages = find:
package_dir =
    =src
install_requires =
    PySMT>=0.9.5
    asdl-adt>=0.1,<0.2
    asdl>=0.1.5
    build>=1.2.1
    z3-solver>=4.13.0.0
    yapf>=0.40.2

[options.packages.find]
where = src

[options.package_data]
exo.libs =
    *.c
    *.h

[options.entry_points]
console_scripts =
    exocc = exo.main:main

[options.data_files]
share/exo/cmake =
    src/exo/cmake/*.cmake
